menu: Avoid cancelling the menu on GTK+ grabs inside the GtkMenu

Allows again sliders as menuitems, broken by commit 9b032073.

https://bugzilla.gnome.org/show_bug.cgi?id=786029